# kaleidoscope

./: CMakeLists.txt  README.md  main.cpp
include/: Fractal.hpp  Globals.cpp  Globals.hpp  Mandelbrot.cpp  Mandelbrot.hpp
